--- a/equipos/almeria/asistencias.html
+++ b/equipos/almeria/asistencias.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark container" aria-label="Third navbar example">
         <div class="container-fluid">
-            <img src="../../img/alaves.png" alt="" width="40px">
+            <img src="../../img/almeria.png" alt="" width="40px">
             <h4 class="text-white ms-2 mt-1">Alavés</h4>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
