--- a/equipos/atleticoDeMadrid/partidosJugados.html
+++ b/equipos/atleticoDeMadrid/partidosJugados.html
@@ -22,8 +22,8 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark container" aria-label="Third navbar example">
         <div class="container-fluid">
-            <img src="../../img/alaves.png" alt="" width="40px">
-            <h4 class="text-white ms-2 mt-1">Alavés</h4>
+            <img src="../../img/atleticoMadrid.png" alt="" width="40px">
+            <h4 class="text-white ms-2 mt-1">Atletico de Madrid</h4>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
                 aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
