--- a/equipos/celtaDeVigo/goles.html
+++ b/equipos/celtaDeVigo/goles.html
@@ -18,8 +18,8 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark container" aria-label="Third navbar example">
         <div class="container-fluid">
-            <img src="../../img/cadiz.png" alt="" width="40px">
-            <h4 class="text-white ms-2 mt-1">Cádiz</h4>
+            <img src="../../img/celta.png" alt="" width="40px">
+            <h4 class="text-white ms-2 mt-1">Celta de Vigo</h4>
 
             <div class="collapse navbar-collapse ms-5" id="navbarsExample03">
                 <ul class="navbar-nav me-auto mb-2 mb-sm-0">
