--- a/equipos/rayo/amarillas.html
+++ b/equipos/rayo/amarillas.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark container" aria-label="Third navbar example">
         <div class="container-fluid">
             <img src="../../img/rayo.png" alt="" width="40px">
-            <h4 class="text-white ms-2 mt-1">Rayo</h4>
+            <h4 class="text-white ms-2 mt-1">Rayo Vallecano</h4>
 
             <div class="collapse navbar-collapse ms-5" id="navbarsExample03">
                 <ul class="navbar-nav me-auto mb-2 mb-sm-0">
