--- a/equipos/getafe/partidosJugados.html
+++ b/equipos/getafe/partidosJugados.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse ms-5" id="navbarsExample03">
                 <ul class="navbar-nav me-auto mb-2 mb-sm-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="getafe.html">Plantilla</a>
+                        <a class="nav-link active" aria-current="page" href="alaves.html">Plantilla</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="estadio.html">Estadio</a>
@@ -161,7 +161,7 @@
                 </img>
 
                 <h2>José Ángel Carmona</h2>
-                <h5>7 partidos</h5>
+                <h5>9 partidos</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
@@ -171,16 +171,16 @@
                 </img>
 
                 <h2>Juan Iglesias</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>12 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/getafe/gorkaRivera.png">
                 </img>
 
                 <h2>Gorka Rivera</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -199,24 +199,24 @@
                 </img>
 
                 <h2>Luis Milla</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>17 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/getafe/mauroArrambarri.png">
                 </img>
 
                 <h2>Mauro Arambarri</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>25 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/getafe/oscarRodriguez.png">
                 </img>
 
                 <h2>Óscar Rodríguez</h2>
-                <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>13 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -230,16 +230,16 @@
                 </img>
 
                 <h2>Carles Aleñá</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>11 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/getafe/nemanjaMaksimovic.png">
                 </img>
 
                 <h2>Nemanja Maksimovic</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>28 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -247,16 +247,16 @@
                 </img>
 
                 <h2>John Patrick</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>3 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/getafe/santiagoGarcia.png">
                 </img>
 
                 <h2>Santiago García</h2>
-                <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>3 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -276,24 +276,24 @@
                 </img>
 
                 <h2>Jaime Mata</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>12 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/getafe/masonGreenwood.png">
                 </img>
 
                 <h2>Mason Greenwood</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>30 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/getafe/juanmiLatasa.png">
                 </img>
 
                 <h2>Juanmi Latasa</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>7 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -307,8 +307,8 @@
                 </img>
 
                 <h2>Borja Mayoral</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>17 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
             
