--- a/equipos/mallorca/goles.html
+++ b/equipos/mallorca/goles.html
@@ -88,16 +88,16 @@
                 </img>
 
                 <h2>Predrag Rajkovic</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 goles</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de goles</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/mallorca/dominikGreif.png">
                 </img>
 
                 <h2>Dominik Greif</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 goles</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de goles</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -114,8 +114,8 @@
                 </img>
 
                 <h2>Matija Nastasic</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 goles</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de goles</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/mallorca/toniLato.png">
